password renewal implemented and updated swagger docs
